--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,8 +10,8 @@
 
   --fs-1: 2.5rem;
   --fs-2: 1.5rem;
-  --fs-3: 1.063rem;
-  --fs-4: 0.875rem;
+  --fs-3: 10px;
+  --fs-4: 10px;
   --fs-5: 0.813rem;
 
   --fw-500: 500;
@@ -421,7 +421,7 @@ body {
   position: absolute;
   left: 0;
   transform: translateY(-130px);
-  max-width: 300px;
+  max-width: 180px;
   height: auto !important;
 }
 
@@ -429,15 +429,15 @@ body {
   position: absolute;
   right: 0;
   transform: translateY(-130px);
-  max-width: 300px;
+  max-width: 180px;
   height: auto !important;
 }
 
 .about-shape-3 {
   position: absolute;
   right: 0;
-  transform: translateY(502px);
-  max-width: 300px;
+  transform: translateY(410px);
+  max-width: 180px;
   height: auto !important;
 }
 
@@ -528,7 +528,7 @@ body {
   color: inherit;
   transition: var(--transition);
   line-height: 1.5em;
-  height: 4.8em;
+  height: 2.8em;
   width: 100%;
   white-space: normal;
   overflow: hidden;
@@ -648,7 +648,7 @@ body {
   position: absolute;
   left: 0;
   transform: translateY(-131px);
-  max-width: 300px;
+  max-width: 150px;
   height: auto !important;
 }
 
@@ -656,10 +656,17 @@ body {
   position: absolute;
   right: 0;
   transform: translateY(-131px);
-  max-width: 300px;
+  max-width: 150px;
   height: auto !important;
 }
 
+.team-list {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.team-list-2 {
+  grid-template-columns: repeat(4, 1fr);
+}
 /*-----------------------------------*\
   #FOOTER
 \*-----------------------------------*/
@@ -1130,6 +1137,10 @@ body {
   .contact-item:first-child {
     padding-bottom: 15px;
     margin-bottom: 15px;
+  }
+
+  .work-title > a { 
+    height: 4.8em;
   }
 }
 
